code/infrastructure/base/app.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: app
  name: app
spec:
  ports:
    - name: http
      port: 3333
      protocol: TCP
      targetPort: 3333
  selector:
    run: app
    app: app
  sessionAffinity: None
  type: ClusterIP

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: app
  labels:
    run: app
    app: app
spec:
  replicas: 1
  selector:
    matchLabels:
      run: app
      app: app
  template:
    metadata:
      labels:
        run: app
        app: app
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: app
          # NOTE : you can update to the latest release
          image: ${APP_IMAGE}
          ports:
            - containerPort: 3333
              name: http
          # NOTE: you can increase these resources
          resources:
            requests:
              memory: 1Mi
              cpu: 0.1
            limits:
              memory: 1000Mi
              cpu: 2
          volumeMounts:
            - name: data
              mountPath: /usr/share/app/data
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        # NOTE: Make sure to update your storageClass depending on your provider
        storageClassName: csi-cinder-high-speed
        # NOTE: You can increase the storage size
        resources:
          requests:
            storage: 1Gi
